erDiagram
  PROFILES {
    UUID id PK
    text full_name
  }
  PROPERTIES {
    UUID id PK
    text name
  }
  PROPERTY_MEMBERSHIPS {
    UUID id PK
    UUID property_id FK
    UUID user_id FK
    property_member_role role
  }
  METERS {
    UUID id PK
    UUID property_id FK
    text provider
  }
  ENERGY_READINGS {
    UUID id PK
    UUID property_id FK
    UUID meter_id FK
    timestamptz interval_start
    timestamptz interval_end
  }
  ENERGY_TARIFFS {
    UUID id PK
    UUID property_id FK
    numeric usage_rate_per_kwh
  }
  PRICE_ADJUSTMENTS {
    UUID id PK
    UUID property_id FK
    UUID previous_tariff_id FK
  }
  BILLS {
    UUID id PK
    UUID property_id FK
    UUID tenant_user_id FK
    UUID tariff_id FK
  }
  SOLAR_ASSESSMENTS {
    UUID id PK
    UUID property_id FK
    UUID created_by FK
  }
  SOLAR_PRODUCTS {
    UUID id PK
  }
  LEASE_REQUESTS {
    UUID id PK
    UUID property_id FK
    UUID tenant_user_id FK
  }
  PROPOSALS {
    UUID id PK
    UUID property_id FK
    UUID proposed_by FK
  }
  CONTRACTS {
    UUID id PK
    UUID property_id FK
    UUID proposal_id FK
    UUID tenant_user_id FK
    UUID landlord_user_id FK
    UUID agent_user_id FK
    UUID created_by FK
  }
  ENERGY_CONTROL_SETTINGS {
    UUID id PK
    UUID property_id FK
  }
  ENERGY_CONTROL_COMMANDS {
    UUID id PK
    UUID property_id FK
    UUID requested_by FK
  }
  AUDIT_LOGS {
    UUID id PK
    UUID property_id FK
    UUID actor_user_id FK
  }

  PROFILES ||--o{ PROPERTY_MEMBERSHIPS : "is member in"
  PROPERTIES ||--o{ PROPERTY_MEMBERSHIPS : "has membership"

  PROPERTIES ||--o{ METERS : "has"
  METERS ||--o{ ENERGY_READINGS : "records"
  PROPERTIES ||--o{ ENERGY_READINGS : "has"

  PROPERTIES ||--o{ ENERGY_TARIFFS : "has"
  ENERGY_TARIFFS ||--o{ BILLS : "applies to"

  PROPERTIES ||--o{ PRICE_ADJUSTMENTS : "has"
  ENERGY_TARIFFS ||--o{ PRICE_ADJUSTMENTS : "previous tariff"

  PROPERTIES ||--o{ BILLS : "has"
  PROFILES ||--o{ BILLS : "may be tenant"

  PROPERTIES ||--o{ SOLAR_ASSESSMENTS : "has"
  PROPERTIES ||--o{ PROPOSALS : "has"
  PROPOSALS ||--o{ CONTRACTS : "may lead to"
  PROPERTIES ||--o{ CONTRACTS : "has"

  PROPERTIES ||--|| ENERGY_CONTROL_SETTINGS : "one-to-one"
  PROPERTIES ||--o{ ENERGY_CONTROL_COMMANDS : "has commands"

  PROPERTIES ||--o{ LEASE_REQUESTS : "has"
  PROPERTIES ||--o{ AUDIT_LOGS : "has logs"

  SOLAR_PRODUCTS ||--o{ SOLAR_ASSESSMENTS : "reference (optional)"
